--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ ClassicalMechanics/.ipynb_checkpoints/
 Optics/.ipynb_checkpoints/
 
 ParticlePhysics/.ipynb_checkpoints/
+
+Electrodynamics/.ipynb_checkpoints/
