--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Optics/.ipynb_checkpoints/
 ParticlePhysics/.ipynb_checkpoints/
 
 Electrodynamics/.ipynb_checkpoints/
+
+Relativity/.ipynb_checkpoints/
