Added related problems (GR1777-091 and 092)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.ipynb_checkpoints
 
 ClassicalMechanics/.ipynb_checkpoints/
 
@@ -8,3 +9,7 @@ ParticlePhysics/.ipynb_checkpoints/
 Electrodynamics/.ipynb_checkpoints/
 
 Relativity/.ipynb_checkpoints/
+
+StatisticalMechanics/.ipynb_checkpoints/
+
+QuantumMechanics/.ipynb_checkpoints/
